--- a/Hello.html
+++ b/Hello.html
@@ -6,7 +6,6 @@
 <body>
     <p>Hello there agaain!<br>Whats with the coffee in your hand?
     </p>
-    <p>Adding somthing to main</p>
-    
+    <P>Adding this through feature.</P>
 </body>
 </html>
